kubernetes/pihole/pihole/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 80 
    - port: 53
      targetPort: 53
      nodePort: 53
      protocol: UDP
  selector:
    app: pihole
