kubernetes/pihole/pihole/dev/ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pihole.local`)
      kind: Rule
      services:
        - name: pihole-web
          port: 80
